front contrast + responsive fix

--- a/public/style.css
+++ b/public/style.css
@@ -13,36 +13,47 @@ li {
 }
 
 /* Navbar */
+nav {
+  background-color: #f8f9fa;
+}
 #nav-items {
   font-size: 15px;
   width: 70px;
 }
-.navbar-brand:first-child {
-  border-right: 1px solid rgba(0,0,0,0.1);
-}
 .navbar-brand {
+  border-right: 1px solid rgba(0,0,0,0.1);
   transition: 0.5s;
 }
 .navbar-brand:hover {
+  border-right: 1px solid rgba(0,0,0,0.1);
   background-color: rgba(0,0,0,0.1);
+}
+.nav-link {
+  transition: 0.5s;
+}
+.nav-link:hover {
+  background-color: rgba(0,0,0,0.1);
+}
+#nav-logo {
+  font-size: 15px;
+}
+@media (max-width: 1000px) {
+  .nav-link {
+    /*margin: auto;*/
+    padding: 0 10px;
+  }
 }
 
 /* Home Container */
 #home-container {
-  padding: 56px 100px;
-}
-#nav-logo {
-  font-size: 15px;
-  color: rgba(0,0,0,0.7);
-  transition: 0.5s;
-}
-#nav-logo:hover {
-  color: rgba(0,0,0, 1);
+  padding: 0;
 }
 .container-fluid {
-  padding: 0
+  padding: 0;
 }
-
+.home-row {
+  margin: auto;
+}
 
 /* Card Custom Component */
 .card-product {
@@ -58,18 +69,15 @@ li {
   box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.1);
   transition: 0.5s;
 }
-
 .card-product img {
   height: 100%;
   object-fit: cover;
 }
-
 .card-product h2 {
   font-size: 16px;
   font-weight: bold;
   margin: 0;
 }
-
 .card-product p {
   font-size: 12px;
   line-height: 1.4;
@@ -77,27 +85,29 @@ li {
   margin-bottom: 0;
   margin-top: 8px;
 }
-
 .card-product .card-product-infos {
   padding: 16px;
   width: 100%;
 }
-
 #top-post {
   display: flex;
   justify-content: space-between;
 }
-
+#post-container {
+  padding: 56px 100px;
+  background-color: #f8f9fa;
+}
+#top-post-margin {
+  margin-bottom: 0 !important;
+}
 @media (max-width: 1000px) {
+  #post-container {
+    padding: 30px 10px;
+  }
   #top-post {
     flex-direction: column;
   }
-  #top-post-margin {
-    margin-bottom: 0 !important;
-  }
 }
-
-
 
 
 /* Home Posts list */
@@ -106,11 +116,12 @@ li {
   justify-content: space-between;
   align-items: center;
   border: 1px solid rgba(237, 239, 243, 1);
+  box-shadow: 0 5px 15px rgba(0,0,0,0.1);
   background-color: white;
   transition: 0.5s;
 }
 .posts-list:hover {
-  box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+  box-shadow: 0 5px 15px rgba(164, 181, 222, 1);
 }
 .posts-list a {
   color: black;
@@ -121,8 +132,6 @@ li {
 .posts-list h5 {
   margin-bottom: 0;
 }
-
-
 
 
 /* Show */
@@ -141,11 +150,11 @@ li {
   width: 100%;
   margin: 0 50px;
 }
-
+.comment {
+  border: 1px solid rgba(237, 239, 243, 1);
+  background-color: white;
+}
 @media (max-width: 1000px) {
-  #home-container {
-    padding: 56px 15px;
-  }
   .scard-product {
     flex-direction: column;
   }
@@ -162,9 +171,3 @@ li {
     margin: 20px 0;
   }
 }
-
-.comment {
-  border: 1px solid rgba(237, 239, 243, 1);
-  background-color: white;
-}
-
